# vekziun

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  ECOSYSTEM.md  LICENSE  README.es.md  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json  verify-contract.mjs
.github/workflows/: ci.yml  release.yml
examples/hello-addon/: Cargo.toml  package.json  test-load.mjs  vekziun.config.json
examples/hello-addon/src/: lib.rs
src/: cli.ts  index.ts
src/core/: config.ts  triples.ts
src/napi/: build.ts  cargo-check.ts  loader.ts  optional-deps.ts  pack.ts  publish.ts
tests/: contract.test.mjs
